feat(fleet): update bike categories
